--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
   <div id="app"></div>
   <script>
     window.$docsify = {
-      //...
+        loadSidebar: true,
+        subMaxLevel: 2, 
+        alias: {
+        '/.*/_sidebar.md': '/_sidebar.md'
+        }
     }
   </script>
   <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
