--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         loadSidebar: true,
         subMaxLevel: 2, 
         alias: {
-        '/.*/sidebar.md': '/sidebar.md'
+        '/.*/_sidebar.md': '/_sidebar.md'
         }
     }
   </script>
