--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
         loadNavbar: true,
         subMaxLevel: 2, 
         alias: {
-        '/.*/_sidebar.md': '/_sidebar.md'
+        '/.*/_sidebar.md': '/_sidebar.md',
+        '/.*/_navbar.md': '/_navbar.md'
         }
     }
   </script>
