--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
   <div id="app"></div>
   <script>
     window.$docsify = {
-        loadSidebar: true,
-        loadNavbar: true,
+        loadSidebar: 'sidebar.md',
+        loadNavbar: 'navbar.md',
         subMaxLevel: 2, 
         alias: {
-        '/.*/_sidebar.md': '/_sidebar.md',
-        '/.*/_navbar.md': '/_navbar.md'
+        '/.*/sidebar.md': '/sidebar.md',
+        '/.*/navbar.md': '/navbar.md'
         }
     }
   </script>
