--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     window.$docsify = {
         loadSidebar: 'sidebar.md',
         loadNavbar: 'navbar.md',
+        name: '8BitMixtapeNEO',
         subMaxLevel: 2, 
         alias: {
         '/.*/sidebar.md': '/sidebar.md',
