--- a/index.html
+++ b/index.html
@@ -21,5 +21,7 @@
     }
   </script>
   <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
+  <script src="//unpkg.com/docsify/lib/plugins/search.min.js"></script>
+   
 </body>
 </html>
