--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         loadNavbar: 'navbar.md',
               mergeNavbar: true,
         name: '8BitMixtapeNEO',
+                paths: 'auto',
+
         subMaxLevel: 2, 
         alias: {
         '/.*/navbar.md': '/navbar.md'
