--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div id="app"></div>
   <script>
     window.$docsify = {
-        loadSidebar: 'sidebar.md',
+        loadSidebar: true,
         loadNavbar: 'navbar.md',
               mergeNavbar: true,
         name: '8BitMixtapeNEO',
