--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     window.$docsify = {
         loadSidebar: true,
         loadNavbar: 'navbar.md',
-              mergeNavbar: true,
+              mergeNavbar: false,
         name: '8BitMixtapeNEO',
                 paths: 'auto',
 
