--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     window.$docsify = {
         loadSidebar: true,
         loadNavbar: 'navbar.md',
-              mergeNavbar: false,
+        mergeNavbar: false,
+        coverpage: true,
         name: '8BitMixtapeNEO',
-                paths: 'auto',
-
+        paths: 'auto',
         subMaxLevel: 2, 
         alias: {
         '/.*/navbar.md': '/navbar.md'
