--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         loadSidebar: true,
         loadNavbar: 'navbar.md',
         mergeNavbar: false,
-        coverpage: true,
+        coverpage: 'coverpage.md',
         name: '8BitMixtapeNEO',
         paths: 'auto',
         subMaxLevel: 2, 
