--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         paths: 'auto',
         subMaxLevel: 2, 
         alias: {
-        '/.*/navbar.md': '/navbar.md'
+        '/.*/navbar.md': '/navbar.md',
         }
     }
   </script>
