--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div id="app"></div>
   <script>
     window.$docsify = {
-        loadSidebar: true,
+        loadSidebar: 'sidebar.md',
         loadNavbar: 'navbar.md',
         mergeNavbar: false,
         coverpage: 'coverpage.md',
