--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     window.$docsify = {
         loadSidebar: 'sidebar.md',
         loadNavbar: 'navbar.md',
-        mergeNavbar: false,
+        mergeNavbar: true,
         coverpage: 'coverpage.md',
         name: '8BitMixtapeNEO',
         paths: 'auto',
