Track 2 files into repository.
- modified assets/css/neodocs.css
- modified index.html

Auto commit by GitBook Editor

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     window.$docsify = {
         loadSidebar: 'sidebar.md',
         loadNavbar: 'navbar.md',
+        onlyCover: true,
         mergeNavbar: true,
         coverpage: 'coverpage.md',
         name: '8BitMixtapeNEO',
