--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
         name: '8BitMixtapeNEO',
         paths: 'auto',
         subMaxLevel: 2, 
+  coverpage: {
+    '/': 'coverpage.md',
+    '/id/': 'coverpage.md'
+  },  
         alias: {
         '/.*/navbar.md': '/navbar.md',
         }
