--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         subMaxLevel: 2, 
   coverpage: {
     '/': 'coverpage.md',
-    '/id/': 'coverpage.md'
+    '/id/': '/id/coverpage.md'
   },  
         alias: {
         '/.*/navbar.md': '/navbar.md',
