--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     window.$docsify = {
         loadSidebar: 'sidebar.md',
         loadNavbar: 'navbar.md',
-        onlyCover: false,
+        onlyCover: true,
         mergeNavbar: true,
         name: '8BitMixtapeNEO',
         paths: 'auto',
