--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         }
     }
   </script>
-  <script src="/docsify.min.js"></script>
+  <script src="/docsify.js"></script>
    
 </body>
 </html>
