--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
         }
     }
   </script>
+  
   <script src="/docsify.js"></script>
-   
+  <script src="/hex2wav.js"></script>
+  <script src="/hexwidget.js"></script>  
+
 </body>
 </html>
