--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
   </script>
   
   <script src="/docsify.js"></script>
+  <script src="/vex.combined.min.js"></script>
   <script src="/hex2wav.js"></script>
   <script src="/hexwidget.js"></script>  
 
