--- a/index.html
+++ b/index.html
@@ -28,10 +28,11 @@
     }
   </script>
   
-  <script src="/docsify.js"></script>
-  <script src="/vex.combined.min.js"></script>
-  <script src="/hex2wav.js"></script>
-  <script src="/hexwidget.js"></script>  
+  <script src="/assets/javascript/zepto.min.js"></script>
+  <script src="/assets/javascript/docsify.js"></script>
+  <script src="/assets/javascript/vex.combined.min.js"></script>
+  <script src="/assets/javascript/hex2wav.js"></script>
+  <script src="/assets/javascript/hexwidget.js"></script>  
 
 </body>
 </html>
