--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" href="/assets/css/neodocs.css">
   
+  <link media="all" type="text/css" rel="stylesheet" href="http://8bitmixtape.cc/css/vex.css">
+  <link media="all" type="text/css" rel="stylesheet" href="http://8bitmixtape.cc/css/vex-theme-plain.css">
+ 
 </head>
 <body>
   <div id="app"></div>
@@ -31,6 +34,7 @@
   <script src="/assets/javascript/zepto.min.js"></script>
   <script src="/assets/javascript/docsify.js"></script>
   <script src="/assets/javascript/vex.combined.min.js"></script>
+  <script>vex.defaultOptions.className = 'vex-theme-plain'</script>  
   <script src="/assets/javascript/hex2wav.js"></script>
   <script src="/assets/javascript/hexwidget.js"></script>  
 
